--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <div class="container text-center my-auto">
         <h1 class="mb-1" id="white">Who's Matthew Bluestein?</h1>
         <h3 class="mb-5" id="white">
-          <em>I'm a UX designer with experience in front and back end development. <br> See what I've accomplished already!</em>
+          <em>I'm a UX designer with experience in front and back end development <br> See what I've accomplished already!</em>
         </h3>
         <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More</a>
       </div>
